--- a/src/main/java/net/waterfallflower/cursedinterpolatorplugin/settings/CursedInterpolatorSettingsForm.form
+++ b/src/main/java/net/waterfallflower/cursedinterpolatorplugin/settings/CursedInterpolatorSettingsForm.form
@@ -26,8 +26,7 @@
             <rowspec value="center:d:grow"/>
             <rowspec value="top:4dlu:noGrow"/>
             <rowspec value="center:max(d;4px):noGrow"/>
-            <colspec value="fill:484px:noGrow"/>
-            <colspec value="fill:max(d;4px):noGrow"/>
+            <colspec value="fill:554px:noGrow"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms/>
@@ -35,22 +34,13 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="fe568" class="com.intellij.openapi.ui.ComboBox" binding="MCP_LOC_BOX">
+              <component id="fe568" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="MCP_LOC_BOX">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                   <forms/>
                 </constraints>
                 <properties>
                   <editable value="true"/>
-                </properties>
-              </component>
-              <component id="5706e" class="javax.swing.JButton" binding="MCP_LOC_BROWSE">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                  <forms/>
-                </constraints>
-                <properties>
-                  <text value="Browse"/>
                 </properties>
               </component>
               <component id="ccdf5" class="javax.swing.JLabel" binding="MCP_LOC_L2">
