--- a/src/main/java/net/waterfallflower/cursedinterpolatorplugin/interpolator/settings/CursedInterpolatorSettingsForm.form
+++ b/src/main/java/net/waterfallflower/cursedinterpolatorplugin/interpolator/settings/CursedInterpolatorSettingsForm.form
@@ -173,7 +173,9 @@
                   <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                   <forms/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="true"/>
+                </properties>
               </component>
               <grid id="7c07b" binding="COMMIT_RELOAD_INFO" layout-manager="FormLayout">
                 <rowspec value="center:d:noGrow"/>
